Made changes and now integrated both of the application, but it needs a little workaround between live server and node server

--- a/Genre and Chord Detection/package.json
+++ b/Genre and Chord Detection/package.json
@@ -4,6 +4,7 @@
   "description": "This is a project which detects the guitar chords and also the genre ",
   "main": "app.js",
   "scripts": {
+    "start":"node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
